--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@uidotdev/usehooks": "^2.4.1",
     "antd": "^4.24.15",
+    "axios": "^1.6.7",
     "classnames": "^2.5.1",
     "history": "^5.3.0",
     "normalize.css": "^8.0.1",
